# FileSearchTUI

./: CMakeLists.txt  README.md
design/: dirtreeFSM.drawio  fstui.drawio
include/: DirTree.hpp  DirTreeBase.hpp  PresetsBase.hpp
src/: CMakeLists.txt  DirTree.cpp  DirTreeBase.cpp  PresetsBase.cpp  main.cpp
